err/lcse-tools.err
Listing '.'...
Listing './bin'...
Compiling './bin/check_missing.py'...
***   File "./bin/check_missing.py", line 113
    print "Usage check_missing.py <path>"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/dpp_server.py'...
***   File "./bin/dpp_server.py", line 174
    print cmd[0]
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/eval_pp.py'...
***   File "./bin/eval_pp.py", line 91
    print expr, self.expr
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/layer_images.py'...
***   File "./bin/layer_images.py", line 33
    print "Processing dummps %s" % dumps
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/plot_rprofiles.py'...
***   File "./bin/plot_rprofiles.py", line 33
    print "Usage:\n plot_rprofiles.py [<rprofile_path>] [<start_dump>]"
                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/pngs2movies.py'...
***   File "./bin/pngs2movies.py", line 53
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './fonts'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/colorlog'...
Listing './lib/python3.5/site-packages/colorlog/tests'...
Listing './lib/python3.5/site-packages/colorlog-3.1.0.dist-info'...
Listing './lib/python3.5/site-packages/lcse'...
Compiling './lib/python3.5/site-packages/lcse/aprofile.py'...
***   File "./lib/python3.5/site-packages/lcse/aprofile.py", line 19
    print "numpy is required for reading rprofiles"
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lcse/lut.py'...
***   File "./lib/python3.5/site-packages/lcse/lut.py", line 98
    print lut(filename=sys.argv[1])
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lcse/restarta.py'...
***   File "./lib/python3.5/site-packages/lcse/restarta.py", line 86
    print '%s is dump %04i' % (p, r.iaaa.get('ndump'))
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lcse/rprofile.py'...
***   File "./lib/python3.5/site-packages/lcse/rprofile.py", line 17
    print "numpy is required for reading rprofiles"
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lcse-10.5.egg-info'...
Listing './lib/python3.5/site-packages/lcse_tools'...
Compiling './lib/python3.5/site-packages/lcse_tools/image_util.py'...
***   File "./lib/python3.5/site-packages/lcse_tools/image_util.py", line 5
    print "Numpy not installed"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lcse_tools/ppm_plots.py'...
***   File "./lib/python3.5/site-packages/lcse_tools/ppm_plots.py", line 325
    print data1[0,:,5].shape
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lcse_tools-6.0.1.egg-info'...
Listing './lib/python3.5/site-packages/lockfile'...
Listing './lib/python3.5/site-packages/lockfile-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
